Done Regularization wrt to Linear models as well as implemented GD Regressor in 1D feature (was only batch though)

--- a/Multi Linear Regression/startups.ipynb
+++ b/Multi Linear Regression/startups.ipynb
@@ -3259,7 +3259,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "daf9f4a7",
+   "id": "8f6bdef0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3473,7 +3473,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "23e26ab4",
+   "id": "19c9b59b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3515,7 +3515,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "1410309a",
+   "id": "c2e8f7b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3526,7 +3526,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "ad261090",
+   "id": "64342e7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3536,7 +3536,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "d411dc1a",
+   "id": "5b254ea7",
    "metadata": {},
    "outputs": [
     {
@@ -3557,7 +3557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69be5095",
+   "id": "631ee3c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3567,31 +3567,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2b5a14f",
+   "id": "2c4d731f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ead7c15e",
+   "execution_count": 89,
+   "id": "8af21a07",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import plotly.express as px\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3744ce08",
+   "id": "9ec8f49c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "px.histogram()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f8bc431",
+   "id": "d7a610aa",
    "metadata": {},
    "outputs": [],
    "source": []
