Association rules done

--- a/Association rules/books.ipynb
+++ b/Association rules/books.ipynb
@@ -702,8 +702,8 @@
    "source": [
     "\n",
     "\n",
-    "# Change the minimum lengthow to find the best supporh in the Apriori algorithm\n",
-    "min_length = 2  # Example minimum length\n",
+    "\n",
+    "min_length = 2  # minimum length\n",
     "frequent_itemsets = apriori(df, min_support=0.1, use_colnames=True)\n",
     "rules = association_rules(frequent_itemsets, metric=\"confidence\", min_threshold=0.5)\n",
     "\n",
